<resources>
    <string name="app_name">IMT3673_Podcast_Manager</string>
    <string name="sign_in_txt">Sign in to Podcast Manager</string>
    <string name="e_mail_input">E-Mail</string>
    <string name="password_input">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dialog_error">Error</string>
    <string name="error_empty">Email or password cannot be empty</string>
    <string name="explore_podcasts">Explore Podcasts</string>
    <string name="add_feed">Add a Podcast</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="home">Home</string>
    <string name="saved_episodes">Saved Episodes</string>
    <string name="dialog_new_podcast">New Podcast</string>
    <string name="add_podcast_url_to">Link to feed or itunes</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="play_pause">Play/Pause</string>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="post_comment">Post Comment</string>
    <string name="comment_post">Post</string>
    <string name="error_no_internet">There is no internet connectivity</string>
    <string name="comment">Comment</string>
    <string name="rating">Rating</string>
    <string name="comments">Comments</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="explore_podcasts_actionbar_title">Explore Podcasts</string>
    <string name="manage_podcasts">Manage Podcasts</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="are_you_sure_remove">Are you sure you want to unsubscribe from this podcast?</string>
    <string name="podcast_deleted">Podcast deleted</string>
    <string name="register_new_user">Register new user</string>
    <string name="register">Register</string>
    <string name="username_input">Username</string>
    <string name="already_have_account">I already have an account</string>
    <string name="error_username_len">Username must be 3 or more characters</string>
    <string name="pref_max_episodes">Max episodes per podcast</string>
    <string name="pref_max_episodes_summary">Choose max amount of episodes to store per podcast</string>
    <string-array name="pref_max_episodes_entries">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string name="pref_max_episodes_default">50</string>
    <string name="error_download">There was an error downloading this podcast</string>
    <string name="error_parse">There was an error parsing this podcast</string>
    <string name="error_sqlite">There was an error with SQLite</string>
    <string name="error_unknown">Unknown error</string>
    <string name="duration_start">00:00/00:00</string>
    <string name="podcast_image">Podcast image</string>
    <string name="download_episode">Download this episode</string>
    <string name="delete_podcast">Delete this podcast</string>
</resources>
